# temporal101

./: .gitignore  HelloOverview.md  HelloWorld.md  README.md  deepdive.html  demo.java  docker-compose.yml  index.html  quiz.html  temporal-tutorial.html
app/: pom.xml
dal-demo/: README.md  docker-compose.yml
docpipeline/: .dockerignore  Dockerfile  README.md  activities.py  app.py  docker-compose.yml  requirements.txt  start.py  worker.py  workflows.py
docupload/: README.md  docker-compose.yml  pom.xml
file-processor/: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
file-processor/processor/: __init__.py  detect.py  dispatcher.py  tesseract_config.py
file-processor/processor/handlers/: __init__.py  image.py  pdf.py  text.py
file-processor/tests/: conftest.py  test_processor.py
file-shuttle/: .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml  run-scenarios.sh
grpcdemo/: Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
java-worker-client/: Dockerfile  README.md  build.bat  build.sh  docker-compose.yml  mvnw  mvnw.cmd  pom.xml  run.bat  run.sh
ocr-temporal-project/: Dockerfile  README.md  pom.xml
pdf-temporal-worker/: .env.example  README.md  docker-compose.yml
temporal-demo/: README.md  (+2 more)
temporal-python-workers/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  registry.py  run_workers.py  start_hello.py
temporal-python-workers/config/: __init__.py  settings.py
temporal-python-workers/scripts/: entrypoint.sh
temporal-python-workers/scripts/setup.d/: 01-register-namespace.sh
temporal-python-workers/workers/: __init__.py
temporal-python-workers/workers/hello_world/: __init__.py  activities.py  workflows.py
(+437 files in other folders)
