[project]
name = "temporal-workers"
version = "0.1.0"
description = "Temporal Python workers with extensible architecture"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
